--- a/src/style/app/sections/_mission.scss
+++ b/src/style/app/sections/_mission.scss
@@ -4,10 +4,10 @@
 
   .layer-transition {
     position: absolute;
-    top: -35%;
+    bottom: 100%;
     z-index: -1;
     display: block;
-    width: 100%;
+    width: 120%;
   }
 
   .container {
@@ -31,7 +31,7 @@
         position: absolute;
         z-index: 1;
         top: 50%;
-        left: 50%;
+        left: 75%;
         transform: translate(-50%, -50%);
         width: 1024px;
         height: 1024px;
